# parquet_aramid-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
src/: caching_parquet_reader.rs  lib.rs  metrics.rs  reader.rs  reader_builder_config.rs  table.rs  types.rs
src/config/: binary.rs  mod.rs  primitive.rs
tests/: bloom.rs  unique_contiguous_sorted.rs
tests/common/: mod.rs
